--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 body {
   max-width: 1200px;
   min-height: 100vh;
   height: 100vh;
   background: #020010;
-  font-family: "Croissant One", cursive;
+  font-family: "Poppins";
   display: flex;
   flex-direction: column;
   align-items: center;
